* 0.22.0
  - O(1) encoding of oneof fields

* 0.21.0
  - Move back to ahamez/protox
  - Bump to Elixir 1.6 as minimal supported version
  - Add benchmarks
  - Add conformance tests to CI
  - Add dialyzer to CI

* 0.20.0
  - Pass all tests of protobuf 3.12 conformance suite tests
  - (proto2) Always serialize required fields
  - Add defs_by_name/0 in generated modules for messages
  - Add syntax/0 in generated modules for messages
  - Add Protox.Message.merge/2 to merge two messages of the same type
  - [Breaking change] (proto2) use nil for unset fields
  - [Breaking change] rename generated get_required_fields/0 into required_fields/0
  - [Breaking change] rename generated get_unknown_fields/0 into unknown_fields/0
  - [Breaking change] rename generated get_unknown_fields_name/0 into unknown_fields_name/0

* 0.19.1
  - Fix warning about duplicate keys (thanks to https://github.com/ananthakumaran)

* 0.19.0
  - CamelCase for all generated modules (fixes https://github.com/ahamez/protox/issues/3)

* 0.18.0
  - Allow ability to construct file names at compile time (thanks to https://github.com/ananthakumaran)

* 0.17.0
  - Add path: option to specify import path (thanks to https://github.com/mathsaey)

* 0.16.2
  - Fix generation of typespecs for when there are more than one required field

* 0.16.1
  - Change base name for unknown fields from '__unknown_fields__' to '__uf__'

* 0.16.0
  - Fix handling of +/-infinity and NaN when encoding/decoding floats
  - Move RandomInit to tests

* 0.15.2
  - Fix typespecs for enum constants accessors

* 0.15.1
  - Fix typespecs for unknown and required fields accessors

* 0.15.0
  - Use 0.0 as default value for floats and doubles

* 0.14.0
  - Development now takes place at https://github.com/EasyMile/protox
  - Move conformance test escript to https://github.com/EasyMile/protox-conformance
  - Remove benchmarks escripts

* 0.13.0
  - Typespecs for generated encoder
  - Bring Varint into Protox